style(toggle switch): fix high contrast style of toggle switch

--- a/vtr-ui/src/app/components/ui/ui-switch-onoff/ui-switch-onoff.component.scss
+++ b/vtr-ui/src/app/components/ui/ui-switch-onoff/ui-switch-onoff.component.scss
@@ -15,17 +15,49 @@
 		}
 	}
 }
-input.switch ~.switch {
+input:not(:disabled).switch ~ .switch {
 	border: 0.1rem solid $grey_dark;
+	&:hover {
+		@media #{$black-on-white} {
+			border: 0.1rem solid $high-contrast-white-dark-magenta;
+		}
+		@media #{$white-on-black} {
+			border: 0.1rem solid $high-contrast-black-cyan;
+		}
+	}
 }
-input.checked ~.switch{
+input:not(:disabled).checked ~ .switch {
 	border: 0.1rem solid transparent;
+	&:hover {
+		@media #{$black-on-white} {
+			@include high-contrast-white-border;
+		}
+		@media #{$white-on-black} {
+			@include high-contrast-black-border;
+		}
+	}
 }
-input:disabled ~.switch {
+input:disabled ~ .switch {
 	border: 0.1rem solid $grey_dark;
+	@media #{$black-on-white} {
+		@include high-contrast-white-background-disabled;
+		@include high-contrast-white-disabled-border;
+	}
+	@media #{$white-on-black} {
+		@include high-contrast-black-background-disabled;
+		@include high-contrast-black-disabled-border;
+	}
 	small {
 		background-color: $grey_darker !important;
 		opacity: 0.4;
+		@media #{$black-on-white} {
+			opacity: 1;
+			background: $light !important;
+		}
+		@media #{$white-on-black} {
+			opacity: 1;
+			background: $dark !important;
+		}
 	}
 }
 
@@ -33,16 +65,6 @@ input:disabled ~.switch {
 	pointer-events: none;
 	.switch {
 		background: $grey_light !important;
-		@media #{$high-contrast} {
-			background: $high-contrast-black-disabled !important;
-		}
-		@media #{$black-on-white} {
-			background: $high-contrast-white-disabled !important;
-		}
-		@media #{$white-on-black} {
-			background: $high-contrast-black-disabled !important;
-		}
-
 	}
 }
 
@@ -77,26 +99,56 @@ input:disabled ~.switch {
 	height: 2.2rem;
 }
 
-input + .switch {
+input:not(:disabled) + .switch {
 	background: $grey_light;
 	// margin-right: 0.7rem; // changed to match the UI Mockup.
-	@media #{$high-contrast} {
-		background:$light;
-	}
+
 	@media #{$black-on-white} {
-		background: $dark;
+		background: $light;
 	}
 	@media #{$white-on-black} {
-		background:$light;
+		background: $dark;
 	}
 
+	&:hover {
+		small {
+			@media #{$black-on-white} {
+				@include high-contrast-white-background;
+			}
+			@media #{$white-on-black} {
+				@include high-contrast-black-background;
+			}
+		}
+	}
 }
 
-input.checked + .switch {
-	background: linear-gradient($gradient_angle, $green_darker 0%, $green-light 100%);
+input:not(:disabled).checked + .switch {
+	background: linear-gradient(
+		$gradient_angle,
+		$green_darker 0%,
+		$green-light 100%
+	);
 	transition: background 1.2s;
-	@media #{$high-contrast} {
-		background: $highlight_bright;
+
+	@media #{$black-on-white} {
+		@include high-contrast-white-background;
+	}
+	@media #{$white-on-black} {
+		@include high-contrast-black-background;
+	}
+	&:hover {
+		@include high-contrast-background-color-reversal;
+		@include high-contrast-white-border;
+		@include high-contrast-black-border;
+
+		small {
+			@media #{$black-on-white} {
+				background: $high-contrast-white-dark-magenta !important;
+			}
+			@media #{$white-on-black} {
+				background: $high-contrast-black-cyan !important;
+			}
+		}
 	}
 }
 
@@ -117,21 +169,14 @@ input.checked + .switch {
 	//-webkit-box-shadow: 0 0.1rem 0.3rem rgba(0, 0, 0, 0.4);
 	//box-shadow: 0 0.1rem 0.3rem rgba(0, 0, 0, 0.4);
 	transition: background-color 0.4s, left 0.2s;
-	@media #{$high-contrast} {
-		background-color: $dark;
-	}
-	@media #{$black-on-white} {
-		background-color: $light;
-	}
-	@media #{$white-on-black} {
-		background-color: $dark;
-	}
+	@include high-contrast-background-color;
 }
 
 input.checked + .switch > small {
 	left: 2.2rem;
 	transition: background-color 0.4s, left 0.2s;
 	background-color: rgb(255, 255, 255);
+	@include high-contrast-background-color-reversal;
 }
 
 /* LARGE - LG */
@@ -178,7 +223,6 @@ input.checked + .switch.switch-xs > small {
 	left: -0.25rem;
 	height: 2.2rem;
 	width: 4.8rem;
-
 }
 
 .switch-xs small {
@@ -242,7 +286,8 @@ input.checked + .switch.switch-xs > small {
 	&:focus {
 		outline: none;
 		border-radius: 10rem;
-		box-shadow: 0px -0.15px 0px 2px $shade_extralight, -0.15px 0px 0px 3.7px $menu_hover;
+		box-shadow: 0px -0.15px 0px 2px $shade_extralight,
+			-0.15px 0px 0px 3.7px $menu_hover;
 		@media #{$high-contrast} {
 			box-shadow: 0px -0.15px 0px 2px $dark, -0.15px 0px 0px 3.7px $light;
 		}
@@ -254,7 +299,7 @@ input.checked + .switch.switch-xs > small {
 		}
 	}
 	&:hover {
-		input.checked ~.switch {
+		input.checked ~ .switch {
 			background: $green_darker !important;
 			transition: none;
 		}
